--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ name: Docker
 on:
   push:
     branches: [ master ]
-    tags: [ 'v*.*' ]
+    tags: [ 'v*' ]
     paths-ignore:
       - 'docs/**'
   pull_request:
@@ -52,6 +52,12 @@ jobs:
         uses: docker/metadata-action@v3.3.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            latest
+            type=ref,event=branch
+            type=ref,event=tag
+            type=ref,event=pr
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
